# rmusic

./: .gitignore  Cargo.toml  diesel.toml
entity/: Cargo.toml  generate.sh
entity/src/: artist.rs  genre.rs  lib.rs  playlist.rs  playlist_item.rs  prelude.rs  publisher.rs  release.rs  track.rs  track_location.rs
migration/: Cargo.toml  rewrite_db.sh
migration/src/: lib.rs  m20240801_artist.rs  m20240802_publisher.rs  m20240803_release.rs  m20240804_playlist.rs  m20240805_track.rs  m20240806_playlist_item.rs  m20240807_genre.rs  m20240808_track_location.rs  types.rs
migrations/2025-07-01-base/: down.sql  up.sql
opus_research/opus/: Opus File.md
src/: audio_conversion.rs  cli.rs  decoders.rs  lib.rs  main.rs  models.rs  ogg_opus.rs  playback.rs  playback_loop.rs  queue.rs  schema.rs
src/database/: context.rs  files.rs  insert.rs  library_view.rs  mod.rs  select.rs
src/decoders/: ogg.rs  ogg_demuxer.rs  ogg_opus.rs  opus_decoder.rs  symphonia_wrap.rs
src/playback/: playback_context.rs
src/queue/: queue_items.rs  select_track.rs
