[package]
name = "rmusic"
version = "0.1.0"
edition = "2021"
authors = ["Earthgame_s <earthgame_s@outlook.com>"]
license = "GPL-3.0-or-later"

[dependencies]
# Local helper things
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
# Other
directories = "5.0" # to get the user directories
lofty = "0.18" # read tags and manipulate all music tags.
clap = { version = "4.0", features = [
    "derive",
    "cargo",
    "env",
] } # command line interface
simplelog = "0.12" # logging
log = "0.4" # logging
magnum-opus = "0.3" # opus but magnum
cpal = "0.15" # music output
byteorder = "1.5" # Read bytes
symphonia = { version =  "0.5", features = ["all"] } # Most formats
rubato = "0.15" # resampler
anyhow = "1.0" # error handeling
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "macros", "debug-print" ] } # sqlite orm
tokio = { version = "1", features = ["full"] } # async
rand = "0.8" # random things
